@@ -156,3 +156,4 @@ ATTR_mailsubjectfmt,
 ATTR_mailbodyfmt,
 ATTR_npdefault,
 ATTR_jobstarttimeout,
+ATTR_jobforcecanceltime,
